--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -6,7 +6,7 @@
     </head>
     <style>
         .bg-black{
-            background-color: black;
+            background-color: #212121;
             color: #fff;
         }
     </style>
@@ -16,14 +16,15 @@
 
         <h2>Lorem ipsum dolor sit amet.</h2>
         <h2>Lorem ipsum dolor sit amet.</h2>
-        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h3>Lorem ipsum dolor sit amet.</h3>
 
         <p>This is my first webpage</p>
        <input type="password" name="" id="" placeholder="Enter your password">
         <ul>
-            <li>one</li>
-            <li>two</li>
-            <li>three</li>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
         </ul>
 
     </div>
